Change switch button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <script src="main.js"></script>
-  <button onclick="SwitchBtn()">Switch X to O</button>
+  <button onclick="SwitchBtn()">Switch</button>
   <button onclick="restartGame()">Restart Game</button>
 </body>
 </html>
