--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Крестики-нолики</title>
+    <title>Tic tac toe</title>
     <style>
       body {
           margin: 0;
@@ -20,38 +20,7 @@
       h1 {
           font-weight: normal;
           margin-bottom: 20px;
-      }
-  
-      div#game {
-          display: grid;
-          grid-template-columns: repeat(3, 100px);
-          grid-template-rows: repeat(3, 100px);
-          gap: 5px;
-      }
-  
-      div#game > div {
-          background: #ffffff;
-          border: 1px solid #cccccc;
-          font-size: 2.5rem;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          cursor: pointer;
-          transition: background-color 0.2s;
-      }
-  
-      div#game > div:hover {
-          background-color: #eeeeee;
-      }
-  
-      div#game > div.X {
-          color: #2c3e50;
-      }
-  
-      div#game > div.O {
-          color: #c0392b;
-      }
-  
+      }  
       .score {
           font-size: 1.2rem;
           margin-bottom: 10px;
@@ -61,20 +30,9 @@
   
 </head>
 <body>
-    <h1>Крестики-нолики</h1>
-    <div id="game">
-        <div class="cell" data-index="0"></div>
-        <div class="cell" data-index="1"></div>
-        <div class="cell" data-index="2"></div>
-        <div class="cell" data-index="3"></div>
-        <div class="cell" data-index="4"></div>
-        <div class="cell" data-index="5"></div>
-        <div class="cell" data-index="6"></div>
-        <div class="cell" data-index="7"></div>
-        <div class="cell" data-index="8"></div>
-    </div>
+    <h1>Tic tac toe</h1>
     <div id="message"></div>
-    <button id="restart">Рестарт</button>
+    <button id="restart">New Game</button>
 
     <script src="main.js"></script>
 </body>
