Added selection for mode

--- a/index.html
+++ b/index.html
@@ -40,9 +40,14 @@
     <button id="restart">New Game</button>
     <label for="boardSize">Choose board size:</label>
     <select id="boardSize">
-    <option value="3">3x3</option>
-    <option value="4">4x4</option>
-    <option value="5">5x5</option>
+        <option value="3">3x3</option>
+        <option value="4">4x4</option>
+        <option value="5">5x5</option>
+    </select>
+    <label for="modeSelect">Game Mode:</label>
+    <select id="modeSelect">
+        <option value="1">One Player (vs Bot)</option>
+        <option value="2">Two Players</option>
     </select>
     <script src="main.js"></script>
 </body>
